# commandcast

./: Dockerfile.dockerfile  README.md  app.py  dev.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
commandcast/: agent_manager.py  data_manager.py  utils.py
deployment/: setup.sh
